--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "rSEA"]
+	path = rSEA
+	url = https://github.com/mitra-ep/rsea
+	shallow = true
+	registered = true
